# translate-video

./: .gitignore  .pylintrc  LICENSE  README.md  THIRD_PARTY_LICENSES  index.html  index.md  install.txt  pyproject.toml  requirements.txt  setup.py
dependency-wheels/: index.html
devscripts/: generate_third_party_licenses.py  translate_readme.py
docs/: index.md
test/: memo.txt  test.ipynb  test.py  test_aihub  test_aihub2.py  test_dataclass.ipynb  test_output.json  test_pwcpp.py  test_transcribe.py  test_vad.py  test_ytdlp_args.ipynb  yt-dlp-h.txt
translatevideo/: __init__.py  transcribe.py
translatevideo/transcribe/: download.py  pwcpp.py  vad.py  whisperx.py  whisperx_.py
translatevideo/translate/: aihub_ja_ko.py  base.py  deep_tr.py  google_tr.py  translate.py
translatevideo/utils/: download_youtube.py  memorymanage.py
typings/whisperx/: SubtitlesProcessor.py  __init__.pyi
