[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translate-video"
version = "0.1.0"
description = "translate video images and audio"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "leejunsu0530", email = "leejunsu0530@gmail.com" }
]

dependencies = [
    "whisperx",
    "transformers"
]

[project.urls]
Homepage = "https://github.com/leejunsu0530/translate-video"
Repository = "https://github.com/leejunsu0530/translate-video"
